# deepwalk_recommender_system_assessment

./: .gitignore  ALGORITHM_EXPLANATION.md  Makefile  README.md  pyproject.toml  requirements.txt
data/: processed_ratings.csv
models/: best_deepwalk_model.model  best_params.json
src/: __init__.py
src/deepwalk_recommender/: config.py  data_preprocessing.py  deepwalk_model.py  error_logger.py  errorlogger.py  evaluate_and_tune.py  main.py  recommendation_system.py  schemas.py
tests/: __init__.py  test_data_processing.py  test_deepwalk_model.py  test_evaluate_and_tune.py  test_main.py  test_recommendation_system.py
