[tool.poetry]
name = "recommendation-engine"
version = "0.1.0"
description = "Tiny Recommendation Engine API"
authors = [
    "Muhammad Abiodun SULAIMAN <muhammad@datasciencenigeria.ai>"
]
readme = "README.md"
packages = [
    {include = "recommendation_engine", from = "src"},
    {include = "data", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
pandas = "^2.3.0"
scikit-learn = "^1.7.0"
networkx = "^3.5"
gensim = "4.3.3"
autopep8 = "^2.3.2"
autoflake = "^2.3.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
httpx = "^0.28.1"
anyio = "^4.9.0"


[tool.poetry.extras]
profiling = ["matplotlib"]  # Optional profiling tools

[tool.ruff]
select = ["E", "F", "I", "B", "C90", "UP", "W", "ANN", "S", "BLE", "C4", "RUF"]
ignore = ["ANN101", "S101", "C901", "BLE001"]  # Ignore specific checks
line-length = 120
target-version = "py312"

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
